Feat: 브랜드 id 리스트 조회 구현